--- a/templates/charts.html
+++ b/templates/charts.html
@@ -14,6 +14,7 @@
         var keywords_options = {
           legend: 'none',
           pieSliceText: 'label',
+          tooltip.text: 'value',
           titleTextSTyle: { color: 'black',
                             fontName: '',
                             fontSize: 20,
@@ -31,6 +32,7 @@
         var users_options = {
           legend: 'none',
           pieSliceText: 'label',
+          tooltip.text: 'value',
           titleTextSTyle: { color: 'black',
                             fontName: '',
                             fontSize: 20,
@@ -48,6 +50,7 @@
         var mentions_options = {
           legend: 'none',
           pieSliceText: 'label',
+          tooltip.text: 'value',
           titleTextSTyle: { color: 'black',
                             fontName: '',
                             fontSize: 20,
