--- a/templates/charts.html
+++ b/templates/charts.html
@@ -14,7 +14,7 @@
         var keywords_options = {
           legend: 'none',
           pieSliceText: 'label',
-          tooltip.text: 'value',
+          tooltip : {text: 'value'},
           titleTextSTyle: { color: 'black',
                             fontName: '',
                             fontSize: 20,
@@ -32,7 +32,7 @@
         var users_options = {
           legend: 'none',
           pieSliceText: 'label',
-          tooltip.text: 'value',
+          tooltip : {text: 'value'},
           titleTextSTyle: { color: 'black',
                             fontName: '',
                             fontSize: 20,
@@ -50,7 +50,7 @@
         var mentions_options = {
           legend: 'none',
           pieSliceText: 'label',
-          tooltip.text: 'value',
+          tooltip : {text: 'value'},
           titleTextSTyle: { color: 'black',
                             fontName: '',
                             fontSize: 20,
