--- a/templates/charts.html
+++ b/templates/charts.html
@@ -77,8 +77,23 @@
     </script>
   </head>
   <body>
-    <div id="keywords" style="width: 30%; height: 500px;"></div>
-    <div id="mentions" style="width: 30%; height: 500px;"></div>
-    <div id="users" style="width: 30%; height: 500px;"></div>
+    <center><h1>#rubyconfindia</h1></center>
+    <br>
+
+    <center><h3>Top 10 Keywords</h3></center>
+    <div id="keywords" style="width: 30%; height: 500px; right:auto; left:auto;"></div>
+    <center><hr width=50%><center>
+
+    <br>
+
+    <center><h3>10 Most Mentioned People</h3></center>
+    <div id="mentions" style="width: 30%; height: 500px; right:auto; left:auto;"></div>
+    <center><hr width=50%><center>
+
+    <br>
+
+    <center><h3>10 People With Most Tweets</h3></center>
+    <div id="users" style="width: 30%; height: 500px; right:auto; left:auto;"></div>
+    <center><hr width=50%><center>
   </body>
 </html>
