--- a/templates/charts.html
+++ b/templates/charts.html
@@ -84,19 +84,19 @@
     <br>
 
     <center><h3>Top 10 Keywords</h3></center>
-    <div id="keywords" style="width: 30%; height: 500px; right:auto; left:auto;"></div>
+    <div id="keywords" style="width: 30%; height: 500px; position:absolute; right:auto; left:auto;"></div>
     <center><hr width=50%><center>
 
     <br>
 
     <center><h3>10 Most Mentioned People</h3></center>
-    <div id="mentions" style="width: 30%; height: 500px; right:auto; left:auto;"></div>
+    <div id="mentions" style="width: 30%; height: 500px;position:absolute;  right:auto; left:auto;"></div>
     <center><hr width=50%><center>
 
     <br>
 
     <center><h3>10 People With Most Tweets</h3></center>
-    <div id="users" style="width: 30%; height: 500px; right:auto; left:auto;"></div>
+    <div id="users" style="width: 30%; height: 500px;position:absolute;  right:auto; left:auto;"></div>
     <center><hr width=50%><center>
   </body>
 </html>
