added heading and other shebangs to template

--- a/templates/charts.html
+++ b/templates/charts.html
@@ -83,20 +83,20 @@
     <center><h1>#rubyconfindia</h1></center>
     <br>
 
-    <center><h3>Top 10 Keywords</h3></center>
-    <div id="keywords" style="width: 30%; height: 500px; position:absolute; right:auto; left:auto;"></div>
+    <center><h3>Top 10 Keywords</h3>
+    <div id="keywords" style="width: 30%; height: 500px;"></div></center>
     <center><hr width=50%><center>
 
     <br>
 
-    <center><h3>10 Most Mentioned People</h3></center>
-    <div id="mentions" style="width: 30%; height: 500px;position:absolute;  right:auto; left:auto;"></div>
+    <center><h3>10 Most Mentioned People</h3>
+    <div id="mentions" style="width: 30%; height: 500px;"></div></center>
     <center><hr width=50%><center>
 
     <br>
 
     <center><h3>10 People With Most Tweets</h3></center>
-    <div id="users" style="width: 30%; height: 500px;position:absolute;  right:auto; left:auto;"></div>
+    <center><div id="users" style="width: 30%; height: 500px;"></div></center>
     <center><hr width=50%><center>
   </body>
 </html>
