--- a/templates/yuvi.html
+++ b/templates/yuvi.html
@@ -1,4 +1,4 @@
-<html>
+<html style='height:100%;'>
   <head>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript">
@@ -79,7 +79,9 @@
       }
     </script>
   </head>
-  <body>
+  <body background='icc_teams.jpg' bgproperties='fixed' bgcolor=#000000 style='
+    height:100%;
+    background:url(icc_teams.jpg) no-repeat fixed center center;'>
     <center><h1>#MiracleBoyYuvi</h1></center>
     <br>
 
