--- a/templates/yuvi.html
+++ b/templates/yuvi.html
@@ -79,7 +79,7 @@
       }
     </script>
   </head>
-  <body background='icc_teams.jpg' bgproperties='fixed' bgcolor=#000000 style='
+  <body background='icc_teams.jpg' bgproperties='fixed' bgcolor=black style='
     height:100%;
     background:url(icc_teams.jpg) no-repeat fixed center center;'>
     <center><h1>#MiracleBoyYuvi</h1></center>
