trying bg properties

--- a/templates/yuvi.html
+++ b/templates/yuvi.html
@@ -81,24 +81,24 @@
   </head>
   <body background='icc_teams.jpg' bgproperties='fixed' bgcolor=black style='
     height:100%;
-    background:url(icc_teams.jpg) no-repeat fixed center center;'>
+    background:url(icc_teams.jpg) no-repeat fixed center center;background-color:#000000; color:#889999;font-family:Arial;'>
     <center><h1>#MiracleBoyYuvi</h1></center>
     <br>
 
     <center><h3>Top 10 Keywords</h3>
     <div id="keywords" style="width: 30%; height: 500px;"></div></center>
-    <center><hr width=50%><center>
+    <center><center>
 
     <br>
 
     <center><h3>10 Most Mentioned People</h3>
     <div id="mentions" style="width: 30%; height: 500px;"></div></center>
-    <center><hr width=50%><center>
+    <center><center>
 
     <br>
 
     <center><h3>10 People With Most Tweets</h3></center>
     <center><div id="users" style="width: 30%; height: 500px;"></div></center>
-    <center><hr width=50%><center>
+    <center><center>
   </body>
 </html>
