--- a/templates/charts.html
+++ b/templates/charts.html
@@ -65,7 +65,8 @@
                     bottom:'auto',
                     right:'auto',
                     width:"100%",
-                    height:"100%"}
+                    height:"100%",
+                    backgroundColor:'transparent'}
         };
         var chart = new google.visualization.PieChart(document.getElementById('keywords'));
         chart.draw(keywords_data, keywords_options);
