--- a/templates/yuvi.html
+++ b/templates/yuvi.html
@@ -79,9 +79,9 @@
       }
     </script>
   </head>
-  <body background='images/icc_teams.jpg' bgproperties='fixed' bgcolor=black style='
+  <body bgproperties='fixed' bgcolor=black style='
     height:100%;
-    background:url(images/icc_teams.jpg) no-repeat fixed center center;background-color:#000000; color:#889999;font-family:Arial;'>
+    background:url(https://drive.google.com/file/d/0B9F-LGc89YwAU3BKbDQ1V3FZSjQ/edit?usp=sharing) no-repeat fixed center center;background-color:#000000; color:#889999;font-family:Arial;'>
     <center><h1>#MiracleBoyYuvi</h1></center>
     <br>
 
