--- a/templates/yuvi.html
+++ b/templates/yuvi.html
@@ -79,26 +79,24 @@
       }
     </script>
   </head>
-  <body bgproperties='fixed' bgcolor=black style='
-    height:100%;
-    background:url(https://drive.google.com/file/d/0B9F-LGc89YwAU3BKbDQ1V3FZSjQ/edit?usp=sharing) no-repeat fixed center center;background-color:#000000; color:#889999;'>
+  <body>
     <center><h1>#MiracleBoyYuvi</h1></center>
     <br>
 
     <center><h3>Top 10 Keywords</h3>
     <div id="keywords" style="width: 30%; height: 500px;"></div></center>
-    <center><center>
+    <center><hr width=50%><center>
 
     <br>
 
     <center><h3>10 Most Mentioned People</h3>
     <div id="mentions" style="width: 30%; height: 500px;"></div></center>
-    <center><center>
+    <center><hr width=50%><center>
 
     <br>
 
     <center><h3>10 People With Most Tweets</h3></center>
     <center><div id="users" style="width: 30%; height: 500px;"></div></center>
-    <center><center>
+    <center><hr width=50%><center>
   </body>
 </html>
