--- a/templates/yuvi.html
+++ b/templates/yuvi.html
@@ -13,21 +13,8 @@
       function drawVisualization() {
 
         // Create and populate a data table.
-        var data = new google.visualization.DataTable();
-        data.addColumn('string', 'Tag');
-        data.addColumn('string', 'URL');
-        data.addColumn('number', 'count')
-        data.addRows(7);
-        var apidata = {{ all_keywords|safe }};
-        console.log(apidate);
-        var arrayLength = data.length;
-
-        for (var i = 0; i < arrayLength; i++) {
-          data.setCell(i, 0, apidata[i][0]);
-          data.setCell(i, 1, apidata[i][1]);
-          data.setCell(i, 2, apidata[i][2]);
-
-        }
+        var data = google.visualization.arrayToDataTable({{ all_keywords|safe }});
+       
         // Instantiate our table object.
         var vis = new gviz_word_cumulus.WordCumulus(document.getElementById('termcloud'));
 
